--- a/app/components/Main/main-style.css
+++ b/app/components/Main/main-style.css
@@ -1,5 +1,6 @@
 .initial-joke {
-  margin: 0 auto;
+  margin: 20px auto;
+  padding: 20px;
   text-align: center;
   border: 1px dotted white;
   width: 80%;
