--- a/app/components/Button/button-style.css
+++ b/app/components/Button/button-style.css
@@ -3,7 +3,15 @@
   position: absolute;
   top: 0;
   right: 0;
-  border-radius: 100%;
+  border-radius: 50px;
+  height: 50px;
+  width: 50px;
   text-decoration: none;
+  border: none;
   margin: 20px;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
 }
