--- a/app/components/Button/button-style.scss
+++ b/app/components/Button/button-style.scss
@@ -14,6 +14,28 @@ $padding-margin: 20px;
   margin: $padding-margin;
 }
 
+.joke-button {
+  background: rgb(192,192,192);
+  border-radius: 10px;
+  height: 50px;
+  width: 150px;
+  text-decoration: none;
+  border: none;
+  margin: $padding-margin;
+}
+
+.favorites-button {
+  background: rgb(192,192,192);
+  border-radius: 10px;
+  height: 40px;
+  width: 75px;
+  text-decoration: none;
+  border: none;
+  margin: $padding-margin;
+  display: block;
+  margin: 0 auto;
+}
+
 .link {
   text-decoration: none;
   color: black;
