bunch of linting, might do some proptypes this morning

--- a/app/components/Header/header-style.scss
+++ b/app/components/Header/header-style.scss
@@ -5,6 +5,7 @@ $padding-margin: 20px;
 
 .chuck-header {
   background: rgba(255, 255, 255, 0.3);
+  height: 150px;
 }
 
 .header-title {
@@ -13,4 +14,5 @@ $padding-margin: 20px;
   color: white;
   text-align: center;
   padding: $padding-margin;
+  padding-top: 50px;
   }
