--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Karla');
+
 body {
   background: rgb(29,53,63);
   color: white;
+  font-family: "Karla", sans-serif;
 }
