--- a/app/components/Jokes/jokes-style.scss
+++ b/app/components/Jokes/jokes-style.scss
@@ -12,3 +12,13 @@ $padding-margin: 20px;
 .chuck-jokes {
   text-align: center;
 }
+
+.fave-button {
+  margin: $padding-margin;
+  background-color: transparent;
+  border: none;
+  color: white;
+  position: relative;
+  right: 0;
+  bottom: 0;
+}
