--- a/app/components/Jokes/jokes-style.scss
+++ b/app/components/Jokes/jokes-style.scss
@@ -19,7 +19,7 @@ $padding-margin: 20px;
   font-size: 18px;
   border: none;
   color: white;
-  position: relative;
+  position: absolute;
   right: 0;
   bottom: 0;
 }
