--- a/app/components/Main/main-style.scss
+++ b/app/components/Main/main-style.scss
@@ -12,3 +12,15 @@ $padding-margin: 20px;
 .chuck-butt {
   text-align: center;
 }
+
+.fave {
+  text-align: center;
+}
+
+
+.instructions {
+  color: rgba(255, 255, 255, 0.3);
+  text-align: center;
+  margin: $padding-margin;
+  font-size: 40px;
+}
